samples/_failures_safe/1761245611_736a74_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09855910.c: In function ‘validate_input’:
./samples/SAFE/__tmp_09855910.c:186:9: error: expected expression at end of input
  186 |         if (
      |         ^~
./samples/SAFE/__tmp_09855910.c:186:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_09855910.c:186:9: error: expected declaration or statement at end of input
